<resources>
    <string name="app_name">C4 Semana 1</string>
    <string name="text_username">UserName</string>
    <string name="hint_username">email@example.com</string>
    <string name="text_password">Password</string>
    <string name="hint_password">password</string>
    <string name="button_login">LOGIN</string>
    <string name="text_welcome">Welcome</string>
    <string name="user">Juan</string>
    <string name="text_introduction">Introduction</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, set do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="text_class1">Class 1</string>
    <string name="lorem_ipsum_2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="dlog_title">ERROR!</string>
    <string name="dlog_message">Invalid username or password</string>
    <string name="dlog_title2">WELCOME!</string>
    <string name="dlog_message2">User: </string>
    <string name="dlog_bp">OK</string>
    <string name="dlog_bn">CANCEL</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_action_settings">Settings</string>
    <string name="txt_action_logout">Logout</string>
    <string name="txt_fab">Element added</string>
    <string name="btn_register">REGISTER</string>
    <string name="text_Name">Name</string>
    <string name="text_LastName">Last name</string>
    <string name="text_Nit">Nit</string>
    <string name="text_Email">Email address</string>
    <string name="text_Phone">Phone</string>
    <string name="text_Policies">Privacy policies</string>
    <string name="text_validationTrue">"validation ok "</string>
    <string name="text_validationFalse">"validation error "</string>
    <string name="text_validationRequire">Require</string>
    <string name="text_errorName">Name error</string>
    <string name="text_lastNameError">Invalid Last name </string>
    <string name="text_emailError">invalid email</string>
    <string name="text_passwordError">Invalid password</string>
</resources>